--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "eslint-plugin-jest-react": "^0.1.0",
     "focus-visible": "^5.2.0",
     "fox-favicon": "^1.0.0",
+    "gsap": "^3.11.4",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -84,6 +85,7 @@
     "react-router-dom": "^6.7.0",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
-    "redux-saga": "^1.2.2"
+    "redux-saga": "^1.2.2",
+    "swiper": "^9.1.0"
   }
 }
